[package]
name = "EWUT"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
serde =  { version = "1.0.228" , features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
hardware-query = "0.2.1"
dirs = "5.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
eyre = "0.6.12"
